<package>
  <!-- Package Metadata -->
  <name>rostweet2</name>
  <maintainer email="nightstalker@ROS.com">Nightstalker</maintainer>
  <description>
    curl + ROS
  </description>
  <version>0.0.0</version>
  <license>BSD</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>